<resources>
    <string name="app_name">Expenses Manager</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Expenses Manager</string>
    <string name="nav_header_subtitle">powered by Codenerdz</string>
    <string name="nav_header_desc">Navigation header</string>

    <!--side navigation menu items-->
    <string name="menu_spender">Spenders</string>
    <string name="menu_category">Category</string>
    <string name="menu_payment_method">Payment Method</string>

    <!--action bar menu items-->
    <string name="action_create_new_category">New Category</string>
    <string name="action_create_new_payment_method">New Payment Method</string>
    <string name="action_create_new_spender">New Spender</string>
    <string name="action_create_new_expense">New Expense</string>


    <!--new category dialog-->
    <string name="new_category">New Category</string>

    <!--new payment method dialog-->
    <string name="new_payment_method">New Payment Method</string>

    <!--new spender dialog-->
    <string name="new_spender">New Spender</string>

    <!--expenditure-->
    <string name="expenses">Expenses</string>

    <!--common-->
    <string name="add">Add</string>
    <string name="name">Name</string>
    <string name="individual">Individual</string>
    <string name="shared">Shared</string>
    <string name="new_expense">New Expense</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="edit_expense">Edit Expense</string>
    <string name="menu_analysor">Analysor</string>
    <string name="menu_balance">Balance</string>
    <string name="spender">spender</string>


    <!--analysor-->
    <string name="expense">Expenses</string>
</resources>
