<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
android:orientation="vertical" android:layout_width="match_parent"
android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/empty_label"
            android:layout_width="70dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="20sp" />
        <Button
            android:id="@+id/add_new_payment_method_button"
            android:layout_width="70dp"
            android:layout_height="35dp"
            android:background="@color/green"
            android:textAlignment="center"
            android:text="Add"
            android:textColor="@color/black"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/payment_method_name_label"
            android:layout_width="45dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:text="@string/name"
            android:textSize="20sp" />
        <EditText
            android:id="@+id/payment_method_name_text_field"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:background="@color/light_grey"
            android:gravity="start"
            android:layout_weight="2"
            android:textColor="@color/black"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <RadioGroup
            android:id="@+id/is_shared_option_radio_group"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/radio_button_individual"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/individual"
                android:checked="true" />

            <RadioButton
                android:id="@+id/radio_button_shared"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/shared" />

        </RadioGroup>
    </LinearLayout>
    <include
        android:id="@+id/payment_method_image_list"
        android:layout_marginTop="10dp"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        layout="@layout/content_grid_layout" />

</LinearLayout>